[tool.poetry]
name = "news_extractor"
version = "0.1.0"
description = "Extract news from telegram, vk and other news websites"
authors = ["Nikita Churikov <nikita@chur.ru>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
vk-api = "^11.4"
Telethon = "^1.8"

[tool.poetry.dev-dependencies]
pytest = "^4.6"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
